--- a/docs/src/man/man9/motion.9.adoc
+++ b/docs/src/man/man9/motion.9.adoc
@@ -18,14 +18,14 @@ The limits for the following items are compile-time settings:
 *names_dout*:: A comma-separated list of names for digital output pins.
   This parameter is mutually exclusive with *num_dio*, but can be combined with *names_din*.
   A maximum of *EMCMOT_MAX_DIO* names can be specified.
-  The default digital output pin has names like *motion.digital-out-00* whereas *names_dout=*_is-homing-x,is-homing-y_
+  The default digital output pin has names like *motion.digital-out-00* whereas **names_dout=**_is-homing-x,is-homing-y_
   will create the HAL pins `motion.dout-is-homing-x` and `motion.dout-is-homing-y`.
 
 *names_din*:: A comma-separated list of names for digital input pins.
   This parameter is mutually exclusive with *num_dio*, but can be
   combined with *names_dout*. A maximum of *EMCMOT_MAX_DIO* names can be
   specified. The default digital input pin has names like
-  *motion.digital-in-00* whereas *names_din=*_homed-x,homed-y_ will
+  *motion.digital-in-00* whereas **names_din=**_homed-x,homed-y_ will
   create the HAL pins `motion.din-homed-x` and `motion.din-homed-y`.
 
 *num_aio*:: Maximum number of analog IO pins is set by
@@ -36,14 +36,14 @@ The limits for the following items are compile-time settings:
   This parameter is mutually exclusive with *num_aio*, but can be
   combined with *names_ain*. A maximum of *EMCMOT_MAX_AIO* names can be
   specified. The default analog output pin has names like
-  *motion.analog-out-00* whereas *names_aout=*_feedrate1,feedrate2_ will
+  *motion.analog-out-00* whereas **names_aout=**_feedrate1,feedrate2_ will
   create the HAL pins `motion.aout-feedrate1` and `motion.aout-feedrate2`.
 
 *names_ain*:: A comma-separated list of names for analog input pins.
   This parameter is mutually exclusive with *num_aio*, but can be
   combined with *names_aout*. A maximum of *EMCMOT_MAX_AIO* names can be
   specified. The default analog input pin has names like
-  *motion.analog-in-00* whereas *names_ain=*_proxy1,proxy2_ will create
+  *motion.analog-in-00* whereas **names_ain=**_proxy1,proxy2_ will create
   the HAL pins `motion.ain-proxy1` and `motion.ain-proxy2`.
 
 *num_misc_error*:: Maximum number of extra error inputs is set by *EMCMOT_MAX_MISC_ERRORS*.
@@ -216,10 +216,10 @@ Note: feed-inhibit applies to G-code commands -- not jogs.
   low coolant warnings, custom HAL component errors.
   If driven TRUE this will disable a machine. Similar to spindle.amp-fault-in.
 *motion.motion-enabled* OUT BIT::
-*motion.motion-type* OUT S32::
-  These values are from src/emc/nml_intf/motion_types.h.
   +
-  ____
+*motion.motion-type* OUT S32::
+  These values are from src/emc/nml_intf/motion_types.h:
+
   0: Idle (no motion)
 
   1: Traverse
@@ -233,7 +233,7 @@ Note: feed-inhibit applies to G-code commands -- not jogs.
   5: Probing
 
   6: Rotary unlock for traverse
-  ____
+  
 
 *motion.on-soft-limit* OUT BIT::
 *motion.probe-input* IN BIT::
@@ -314,11 +314,12 @@ Note: feed-inhibit applies to G-code commands -- not jogs.
 **axis.**_L_**.teleop-pos-cmd** OUT FLOAT::
 **axis.**_L_**.teleop-tp-enable** OUT BIT::
   TRUE when the "teleop planner" is enabled for this axis.
-**axis.**_L_**.teleop-vel-cmd* OUT FLOAT::
+**axis.**_L_**.teleop-vel-cmd** OUT FLOAT::
   The axis's commanded velocity.
 **axis.**_L_**.teleop-vel-lim** OUT FLOAT::
   The velocity limit for the teleop planner.
 **axis.**_L_**.wheel-jog-active** OUT BIT::
+  +
 
 == JOINT PINS
 
@@ -416,6 +417,7 @@ Note: Pins marked *(DEBUG)* serve as debugging aids and are subject to change or
 **joint.**_N_**.vel-cmd** OUT FLOAT *(DEBUG)*::
   The joint's commanded velocity.
 **joint.**_N_**.wheel-jog-active** OUT BIT *(DEBUG)*::
+  +
 
 == JOINT posthome pins
 
@@ -509,8 +511,9 @@ Many of the parameters serve as debugging aids, and are subject to change or rem
   Show information about the execution time of these HAL functions in CPU clocks.
 
 *motion-controller.tmax-increased* RO BIT::
+  +
 
-*motion.debug-*_*_::
+**motion.debug-**_*_::
   These values are used for debugging purposes.
 
 == FUNCTIONS
