--- a/docs/src/man/man9/hm2_spi.9.adoc
+++ b/docs/src/man/man9/hm2_spi.9.adoc
@@ -7,7 +7,7 @@ driver for the Mesa Electronics SPI Anything IO boards, with HostMot2 firmware.
 
 == SYNOPSIS
 
-*loadrt hm2_spi* [**config="**__str__[,__str__...]**"** ] [ **spidev_path=**_path_[,_path_...] ] [**spidev_rate=**__rate__[,__rate__...] ]
+*loadrt hm2_spi* [**config=**"__str__[,__str__...]"] [ **spidev_path=**_path_[,_path_...] ] [**spidev_rate=**__rate__[,__rate__...] ]
 
 ____
 *config* [default: ""]::
