--- a/docs/man/man1/modcompile.1
+++ b/docs/man/man1/modcompile.1
@@ -26,14 +26,38 @@
 .SH NAME
 modcompile \- Utility for compiling Modbus drivers
 
+.SH SYNOPSIS
+
+\fBmodcompile -h\fR
+
+\fBmodcompile* [\fB-k\fR] [\fB-n\fR] [\fB-v\fR] all
+
+\fBmodcompile* [\fB-k\fR] [\fB-n\fR] [\fB-v\fR] module.mod ...
+
 .SH DESCRIPTION
-\fBmodcompile\fR is used to compile modbus drivers that use the Mesa
-card UARTs. 
+The \fBmodcompile\fR utility is used to compile modbus drivers that use the PktUART
+interface of Mesa cards.
 
 See the main LinuxCNC documentation for more details. 
 
 http://linuxcnc.org/docs/stable/html/drivers/mesa_modbus.html
-.
+
+.SH OPTIONS
+.TP
+\fB-h\fR, \fB--help\fR
+Brief help message.
+.TP
+\fB-k\fR, \fB--keep\fR
+Keep the temporary files. The program will print a line where these are
+located. You will be responsible for deleting them.
+.TP
+\fB-n\fR, \fB--noinstall\fR
+Do not run the install step for the compiled module. This option is probably
+only useful if you also use the \fB--keep\fR option.
+.TP
+\fB-v\fR, \fB--verbose\fR
+Do a verbose build, showing all steps detailed while being performed.
+
 .SH "SEE ALSO"
 \fBLinuxCNC(1)\fR
 
