--- a/docs/src/hal/halui-examples.adoc
+++ b/docs/src/hal/halui-examples.adoc
@@ -23,7 +23,7 @@ HALUI = halui
 
 To connect a remote program start button to LinuxCNC you use the
 `halui.program.run` pin and the `halui.mode.auto` pin.
-You have to insure that it is OK to run first by using the
+You have to ensure that it is OK to run first by using the
 `halui.mode.is-auto` pin. You do this with an `and2`
 component. The following figure shows how this is done.
 When the Remote Run Button is pressed it is connected to
