--- a/docs/src/gui/qtdragon.adoc
+++ b/docs/src/gui/qtdragon.adoc
@@ -146,6 +146,19 @@ INCREMENTS = Continuous, .001 mm, .01 mm, .1 mm, 1 mm, 1.0 inch, 0.1 inch, 0.01 
 ANGULAR_INCREMENTS = 1, 5, 10, 30, 45, 90, 180, 360
 ----
 
+=== Grid Increments
+Set the available optional grid sizes for graphics display. +
+This will override the default sizes. +
+'mm' and 'in' are used to specify units. +
+The grid selection box is shown when clicking the 'OPTN' button 
+on the graphics display.
+
+[source,{ini}]
+----
+[DISPLAY]
+GRIDS = 0, .1 mm, 1 mm, 2 mm, 5 mm, 10 mm, .25 in, .5 in
+----
+
 === Jog speed
 
 Set jog speed controls (in units per second)
@@ -954,6 +967,17 @@ Sequence after pressing the probe button: +
 . rapid back to starting corner (now calculated using the probed walls),
 . if auto zero button is enabled, set X and Y of the current user system to zero.
 
+=== Customizing Probe Screen Widget
+It is possible to load a customized version of the probe widget. +
+
+There should be a folder in the config folder; for screens: named <CONFIG FOLDER>/qtvcp/. +
+There may be (or can be added) a folder 'lib/' and 'widgets/' +
+In the widgets folder you can copy 'basic_probe.py' (or 'versa_probe.py') and 'probe_subprog.py' +
+In the lib folder copy 'touchoff_subprogram.py' +
+If these files are found they will be used instead of the originals. +
+You can modify the files to change behaviour. +
+
+
 [[sub:touch-plate]]
 == Touch plate
 
@@ -1651,20 +1675,17 @@ To have the manual spindle buttons also incrementally increase/decrease speed:
 
 === Qt Designer and Python code
 
-All aspects of the GUI are fully customization through Qt Designer and/or Python code.
-This capability is included with the QtVCP development environment.
-The extensive use of QtVCP widgets keeps the amount of required Python code to a minimum, allowing relatively easy modifications.
-The LinuxCNC website has extensive documentation on the installation and use of QtVCP libraries.
+All aspects of the GUI are fully customization through Qt Designer and/or Python code. +
+This capability is included with the QtVCP development environment. +
+The extensive use of QtVCP widgets keeps the amount of required Python code to a minimum, allowing relatively easy modifications. +
+The LinuxCNC website has extensive documentation on the installation and use of QtVCP libraries. +
 See <<cha:qtvcp,QtVCP>> for more information about QtVCP in general. +
+Custom modifications can be added by 'subclassing' the handler file. This adds code on top of the original. +
 QtDragon can also utilize QtVCP's rc file to do minor python code modifications without using a custom handler file.
 
-[source,{ini}]
-----
-[DISPLAY]
-USER_COMMAND_FILE = CONFIGFOLDER/qtdragonrc.py
-----
-
 See <<cha:qtvcp:modifying-screens,Modifying Screens>> for more information about customization.
+
+Some widget customization is available for basic probe and versa probe.
 
 .QtDragon - Customized QtDragon
 image::images/silverdragon_custom.png["QtDragon customized",scale=25]
