--- a/docs/src/hal/components.adoc
+++ b/docs/src/hal/components.adoc
@@ -304,7 +304,7 @@ the input is a position, this means that the 'position', 'velocity', and 'accele
 === Other (Realtime)
 [{tab_options}]
 |===
-| link:../man/man9/comp.9.html[comp] | Build, compile and install LinuxCNC HAL components. ||
+| link:../man/man1/halcompile.1.html[halcompile] | Build, compile and install LinuxCNC HAL components. ||
 | link:../man/man9/classicladder.9.html[classicladder] | Realtime software PLC based on ladder logic. See <<cha:classicladder,ClassicLadder>> chapter for more information. ||
 | link:../man/man9/threads.9.html[threads] | Creates hard realtime HAL threads. ||
 | link:../man/man9/charge_pump.9.html[charge_pump] | Creates a square-wave for the 'charge pump' input of some controller boards.
